[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Borders/Elements_Border_top.png" type="Texture" id=1]
[ext_resource path="res://ScalingShader.gdshader" type="Shader" id=2]
[ext_resource path="res://Assets/Borders/Elements_Border_Left.png" type="Texture" id=3]
[ext_resource path="res://Assets/Borders/Elements_Border_Right.png" type="Texture" id=4]
[ext_resource path="res://Assets/Borders/Elements_Border_Bottom.png" type="Texture" id=5]
[ext_resource path="res://Assets/MenuGradient.png" type="Texture" id=6]
[ext_resource path="res://Scripts/AudioMenu.gd" type="Script" id=7]
[ext_resource path="res://Assets/AudioScreenFontTheme.tres" type="Theme" id=8]
[ext_resource path="res://Scenes/Click.tscn" type="PackedScene" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 240.0 ],
"_edit_vertical_guides_": [ 320.0, 184.0 ]
}

[node name="Click" parent="." instance=ExtResource( 9 )]

[node name="MenuGradient" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.478431 )
position = Vector2( 320, 240.5 )
scale = Vector2( 1, 1.00208 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 27.0
margin_top = 105.0
margin_right = 619.0
margin_bottom = 375.0
color = Color( 0.486275, 0.847059, 0.243137, 0.556863 )

[node name="ElementsBorderBottom" type="Sprite" parent="ColorRect"]
position = Vector2( 293, 273 )
scale = Vector2( 3, 1.5 )
texture = ExtResource( 5 )

[node name="ElementsBorderRight" type="Sprite" parent="ColorRect"]
material = SubResource( 1 )
position = Vector2( 593, 133.72 )
scale = Vector2( 3, 0.696458 )
texture = ExtResource( 4 )

[node name="ElementsBorderLeft" type="Sprite" parent="ColorRect"]
position = Vector2( -7.00002, 133.5 )
scale = Vector2( 3, 0.695313 )
texture = ExtResource( 3 )

[node name="ElementsBorderTop" type="Sprite" parent="ColorRect"]
position = Vector2( 293, -6 )
scale = Vector2( 3, 1.5 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 187.0
margin_top = 107.0
margin_right = 607.0
margin_bottom = 368.0
theme = ExtResource( 8 )
custom_constants/separation = 6
alignment = 1

[node name="MasterVolume" type="HSlider" parent="VBoxContainer"]
material = SubResource( 2 )
margin_top = 1.0
margin_right = 420.0
margin_bottom = 65.0
min_value = -40.0
max_value = 10.0
rounded = true

[node name="MusicVolume" type="HSlider" parent="VBoxContainer"]
material = SubResource( 3 )
margin_top = 71.0
margin_right = 420.0
margin_bottom = 135.0
min_value = -40.0
max_value = 10.0

[node name="SoundVolume" type="HSlider" parent="VBoxContainer"]
material = SubResource( 4 )
margin_top = 141.0
margin_right = 420.0
margin_bottom = 205.0
min_value = -40.0
max_value = 10.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 211.0
margin_right = 420.0
margin_bottom = 260.0
text = "BACK"

[node name="Container" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 8 )

[node name="VOLUME" type="Label" parent="Container"]
margin_left = 10.0
margin_top = 122.0
margin_right = 182.0
margin_bottom = 165.0
text = "VOLUME"
align = 2
valign = 1

[node name="VOLUME2" type="Label" parent="Container"]
margin_left = 58.0
margin_top = 195.0
margin_right = 182.0
margin_bottom = 234.0
text = "MUSIC"
align = 2
valign = 1

[node name="VOLUME3" type="Label" parent="Container"]
margin_left = 58.0
margin_top = 265.0
margin_right = 182.0
margin_bottom = 304.0
text = "SFX"
align = 2
valign = 1

[connection signal="value_changed" from="VBoxContainer/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SoundVolume" to="." method="_on_SoundVolume_value_changed"]
[connection signal="button_up" from="VBoxContainer/BackButton" to="." method="_on_BackButton_button_up"]
